# app/Http/Resources/ReportCallbackResource.php
@@ -1,0 +1,37 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Resources\Json\JsonResource;
+
+/**
+ * @OA\Schema(
+ *     title="ReportCallbackResource",
+ *     description="Report callback resource",
+ *     @OA\Xml(
+ *         name="ReportCallbackResource"
+ *     )
+ * )
+ */
+class ReportCallbackResource extends JsonResource
+{
+    /**
+     * @OA\Property(
+     *     title="Data",
+     *     description="Data wrapper"
+     * )
+     *
+     * @var \App\Models\ImageCallbackReport[]
+     */
+    private $data;
+    /**
+     * Transform the resource into an array.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @return array|\Illuminate\Contracts\Support\Arrayable|\JsonSerializable
+     */
+    public function toArray($request)
+    {
+        return parent::toArray($request);
+    }
+}
