# storage/api-docs/api-docs.json
@@ -192,6 +192,120 @@
                 }
             }
         },
+        "/update-report-callback/{id}": {
+            "put": {
+                "tags": [
+                    "Reports"
+                ],
+                "summary": "Update callback endpoint",
+                "description": "Update callback endpoint. Hit this to update the image report callback endpoint.",
+                "operationId": "updateCallbackReport",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Report ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "callback",
+                        "in": "query",
+                        "description": "callback link value",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "default": "http://localhost/api/callback-test"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ImageReport"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/callback/{id}": {
+            "get": {
+                "tags": [
+                    "Reports"
+                ],
+                "summary": "Callback report. Hit this to get the image report moderation by providing the report id.",
+                "description": "Callback report. Hit this to get the image report moderation by providing the report id.",
+                "operationId": "callbackReport",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Report ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ReportCallbackResource"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/callback-test": {
+            "post": {
+                "tags": [
+                    "Reports"
+                ],
+                "summary": "Callback report test",
+                "description": "Callback report test",
+                "operationId": "callbackTester",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
         "/destroy-image-report/{id}": {
             "delete": {
                 "tags": [
@@ -298,6 +412,24 @@
                 },
                 "type": "object"
             },
+            "ReportCallbackResource": {
+                "title": "ReportCallbackResource",
+                "description": "Report callback resource",
+                "properties": {
+                    "data": {
+                        "title": "Data",
+                        "description": "Data wrapper",
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/ImageCallbackReport"
+                        }
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "ReportCallbackResource"
+                }
+            },
             "ReportResource": {
                 "title": "ReportResource",
                 "description": "Report resource",
@@ -314,6 +446,77 @@
                 "type": "object",
                 "xml": {
                     "name": "ReportResource"
+                }
+            },
+            "ImageCallbackReport": {
+                "title": "ImageCallbackReport",
+                "description": "ImageCallbackReport model",
+                "properties": {
+                    "id": {
+                        "title": "ID",
+                        "description": "ImageReport ID",
+                        "type": "integer",
+                        "format": "int64",
+                        "example": 1
+                    },
+                    "adult": {
+                        "title": "Adult",
+                        "description": "The adult probability",
+                        "type": "string",
+                        "example": "UNLIKELY"
+                    },
+                    "spoof": {
+                        "title": "spoof",
+                        "description": "The spoof probability",
+                        "type": "string",
+                        "example": "UNLIKELY"
+                    },
+                    "medical": {
+                        "title": "medical",
+                        "description": "The medical probability",
+                        "type": "string",
+                        "example": "UNLIKELY"
+                    },
+                    "violence": {
+                        "title": "violence",
+                        "description": "The violence probability",
+                        "type": "string",
+                        "example": "UNLIKELY"
+                    },
+                    "racy": {
+                        "title": "racy",
+                        "description": "The racy probability",
+                        "type": "string",
+                        "example": "UNLIKELY"
+                    },
+                    "approved": {
+                        "title": "approved",
+                        "description": "Show if the report is approved or not",
+                        "type": "string",
+                        "example": true
+                    },
+                    "evaluated": {
+                        "title": "evaluated",
+                        "description": "Show if the report is evaluated or not",
+                        "type": "string",
+                        "example": false
+                    },
+                    "probability": {
+                        "title": "probability",
+                        "description": "Show the probability of image to be a sensitive content",
+                        "type": "string",
+                        "example": "HIGH"
+                    },
+                    "probability_level": {
+                        "title": "probability_level",
+                        "description": "Show the probability level (in peecentage) of image to be a sensitive content",
+                        "type": "string",
+                        "example": "0.5"
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "ImageCallbackReport"
                 }
             },
             "ImageReport": {
@@ -392,6 +595,12 @@
                         "description": "Show the probability of image to be a sensitive content",
                         "type": "string",
                         "example": "HIGH"
+                    },
+                    "probability_level": {
+                        "title": "probability_level",
+                        "description": "Show the probability level (in peecentage) of image to be a sensitive content",
+                        "type": "string",
+                        "example": "0.5"
                     },
                     "created_at": {
                         "title": "Created at",
